Basic script to access card data

--- a/package.json
+++ b/package.json
@@ -15,5 +15,6 @@
   "bugs": {
     "url": "https://github.com/tipleyg/swu-adept/issues"
   },
-  "homepage": "https://github.com/tipleyg/swu-adept#readme"
+  "homepage": "https://github.com/tipleyg/swu-adept#readme",
+  "type": "module"
 }
